--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital Research Service</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to the Digital Research Service Group Website!</h1>
+    <p>Empowering research through digital tools and services.</p>
+    <p>Our mission is to support researchers in leveraging digital resources for their projects.</p>
+    <p>Explore our services and get in touch to see how we can assist your research endeavors.</p>
+    <footer>
+        <p>Contact us at: drs@nottingham.ac.uk</p>
+    </footer>
+</body>
+</html>
