--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Research Service</title>
+    <title>Digital Research Service Group</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,16 +12,17 @@
         }
         h1 {
             color: #333;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <h1><b>Welcome to the Digital Research Service Group Website!</b></h1>
+    <h1>Welcome to the Digital Research Service Group Website!</h1>
     <p>Empowering research through digital tools and services.</p>
     <p>Our mission is to support researchers in leveraging digital resources for their projects.</p>
     <p>Explore our services and get in touch to see how we can assist your research endeavors.</p>
     <footer>
-        <p>Contact us at: drs@nottingham.ac.uk</p>
+        <p>Contact us at: research-service@example.com</p>
     </footer>
 </body>
 </html>
