--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <h1><i>Welcome to the Digital Research Service Group Website!</i></h1>
+    <h1>Welcome to the Digital Research Service Group Website!</h1>
     <p>Empowering research through digital tools and services.</p>
     <p>Our mission is to support researchers in leveraging digital resources for their projects.</p>
     <p>Explore our services and get in touch to see how we can assist your research endeavors.</p>
